# lwwdg

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  library.json
dev/: lwwdg_opts.h  main.c
docs/: conf.py  doxyfile.doxy  index.rst  requirements.txt
docs/api-reference/: lwwdg.rst  lwwdg_opt.rst
docs/get-started/: index.rst
docs/user-manual/: index.rst
examples/: example_win32.c
lwwdg/: CMakeLists.txt  library.cmake
lwwdg/src/include/lwwdg/: lwwdg.h  lwwdg_opt.h  lwwdg_opts_template.h
lwwdg/src/lwwdg/: lwwdg.c
